--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 <a href="https://icp.gov.moe/?keyword=20222424" target="_blank">萌ICP备20222424号</a>
 
-<a href="https://ckyf1134.github.io/music.html" target="_blank">|小彩蛋</a>
+<a href="https://gitpages.ckyf1134.top/music.html" target="_blank">|小彩蛋</a>
 
 
 
